# hello

./: README.md  db.sqlite3  pyproject.toml  render.yaml
hello/: settings.py  urls.py
templates/: base.html
todo/: models.py  urls.py  views.py
todo/forms/: forms.py
todo/migrations/: 0001_initial.py
todo/templates/todo/: create_todo.html  todo_detail.html  todo_list.html
